--- a/_site.yml
+++ b/_site.yml
@@ -18,6 +18,8 @@ navbar:
       href: mapping.html
     - text: "Modeling"
       href: modeling.html
+    - text: "Correlation"
+      href: correlation.html
     - text: "Project Report"
       href: report.html
   right:
